--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,7 +1,20 @@
-<!DOCTYPE web-app PUBLIC
- "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" >
+<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
+         version="4.0">
+<display-name>Archetype Created Web Application</display-name>
+<servlet>
+  <servlet-name>RestfulReservations</servlet-name>
+  <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
 
-<web-app>
-  <display-name>Archetype Created Web Application</display-name>
+  <init-param>
+    <param-name>jersey.config.server.provider.packages</param-name>
+    <param-value>com.example.ApiImplimentation.resources</param-value>
+  </init-param>
+
+</servlet>
+<servlet-mapping>
+  <servlet-name>RestfulReservations</servlet-name>
+  <url-pattern>/*</url-pattern>
+</servlet-mapping>
 </web-app>
