--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -11,7 +11,20 @@
     <param-name>jersey.config.server.provider.packages</param-name>
     <param-value>com.example.ApiImplimentation.resources</param-value>
   </init-param>
+  <init-param>
+    <param-name>jersey.config.server.provider.scanning.recursive</param-name>
+    <param-value>true</param-value>
+  </init-param>
 
+  <init-param>
+    <param-name>com.sun.jersey.spi.container.ContainerRequestFilters</param-name>
+    <param-value>com.sun.jersey.api.container.filter.GZIPContentEncodingFilter</param-value>
+  </init-param>
+  <init-param>
+    <param-name>com.sun.jersey.spi.container.ContainerResponseFilters</param-name>
+    <param-value>com.sun.jersey.api.container.filter.GZIPContentEncodingFilter</param-value>
+  </init-param>
+  <load-on-startup>1</load-on-startup>
 </servlet>
 <servlet-mapping>
   <servlet-name>RestfulReservations</servlet-name>
