--- a/pom.xml
+++ b/pom.xml
@@ -50,11 +50,11 @@
       <artifactId>json</artifactId>
       <version>20220924</version>
     </dependency>
-    <dependency>
+  <!--  <dependency>
       <groupId>org.example</groupId>
       <artifactId>Fifth</artifactId>
       <version>1.0-SNAPSHOT</version>
-    </dependency>
+    </dependency>-->
     <dependency>
       <groupId>org.jboss.resteasy</groupId>
       <artifactId>jaxrs-api</artifactId>
